# dotfiles

./: .Brewfile  .Xresources  .agignore  .aliases  .base  .crontab  .editorconfig  .emacs-alt  .functions  .gitattributes  .gitconfig.base  .gitconfig.ref  .gitignore.global  .gitignore_global  .gitmodules  .ideavimrc  .org  .profile  .sleep  .spacemacs  .ssh.config  .tmux.conf  .vimrc  .wakeup  .zshrc  README.org  groups  project.config
.bin/: .gitignore  Pipfile  awsh  cron-descriptor  dl_cleanup  ec  editor  ee  env.sh  ep.py  flatten-json  github-bulk-approve.sh  github-events  github-issues  iap  ical2org.awk  iterm-open.sh  kctl  notify  office_automation.py  org-actions.sh  org-calendar.sh  org-capture  org-jira.py  org-pushbullet.sh  org-standup-in.sh  org-standup-out.sh  org-sync  org-sync-calendar  org-sync-pushbullet  org-sync-todoist  org-todoist.py  org_pushbullet.sh  org_standup_in.sh  org_standup_out.sh  org_todo.sh  pbp  pidof  pyproject.toml  splatoon-schedule  (+3 more)
.bin/office-automation/: Taskfile.yml  go.mod  go.sum  main.go
.config/: ripgrep  vimium-options.json
.functions/: all  aws  base  docker  extra  gcloud  git  git.sh  jira  pushbullet  shell  slack  wrike
.gnupg/: gpg-agent.conf  gpg.conf
.hammerspoon/: .gitignore  .lua-format  Makefile  applications.lua  apps.lua  battery.lua  bindings.lua  chrome.lua  emacs.lua  init.lua  keybinder.lua  keybindings.lua  mode.lua  mounts.lua  reminder.lua  schedule.lua  screen.lua  selection.lua  setup.sh  usb.lua  wifi.lua
.setup/: Brewfile  karabiner-export.sh  requirements.txt  setup.sh  setup_osx.sh  (+2 more)
(+21 files in other folders)
