[tool.poetry]
name = "bin"
version = "0.1.0"
description = ""
authors = ["Jean-Martin Archer <jm@jmartin.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
clubhouse = "==0.2.1"
readability-lxml = "*"
todoist-python = "*"
keyring = "*"
click = "*"
cryptography = "*"
"pushbullet.py" = "*"
orgparse = "*"
pypandoc = "*"
python-slugify = "*"
cron-descriptor = "==1.2.24"
python-kasa = "^0.5.0"
sortedcontainers = "^2.4.0"
homeassistant-api = "^4.2.2.post1"

[poetry.group.dev.dependencies]
black = "==19.3b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
